@@ -1,0 +1,14 @@
+<?php
+
+declare(strict_types=1);
+
+namespace meteocontrol\client\vcomapi\model;
+
+class AlarmClosureInfo extends BaseModel {
+
+    /** @var string|null */
+    public $userName;
+
+    /** @var string|null */
+    public $comment;
+}
