@@ -58,3 +58,4 @@
 2025-04-21: Add site-access for cmms endpoint
 2025-07-02: Add undetermined yield loss calculation option to API
 2025-07-07: Add resolution parameter support for calculating yield losses
+2025-09-01: Add alarm closure reason
